# sparkle

./: Cargo.lock.bkup  Cargo.toml
resources/: blob.xcf  line.xcf
src/: family.rs  main.rs  particle.rs  settings.rs  substrate.rs  useful.rs
