[package]
name = "sparkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
ggez = "0.9.0-rc0"
rand = { version = "0.8.5", features = ["small_rng"] }
kd-tree = { version = "0.5.3", features = ["rayon"] }
typenum = "1.16.0"
palette = "0.7.5"
statistical = "1.0.0"
ndarray = "0.15.6"
ndarray-ndimage = "0.4.0"
clap = { version = "4.5.3", features = ["derive"] }
rand_distr = "0.4.3"

[profile.dev]
opt-level = 1


[profile.release]
lto = "off"
opt-level = 3

[profile.release.package.sparkle]
opt-level = 1
